--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "mongo-sanitize": "^1.1.0",
     "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
+    "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
   }
 }
